overflow correction & border removal

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,13 +1,13 @@
 
 .highlight {
-  background-color: #f2f2f2;
+  background-color: #f5f5f5;
   padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  border: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   margin: 20px 0 20px 0;
-  overflow: visible;
+  overflow: auto;
 }
 
 code {
